crates/shipper/src/ops/auth/snapshots/shipper__ops__auth__resolver__tests__edge_snapshots__snapshot_resolve_unicode_token.snap
---
source: crates/shipper/src/ops/auth/resolver.rs
expression: auth
---
AuthInfo {
    token: Some(
        "tök€n_πλ∞",
    ),
    source: EnvDefault,
    detected: true,
}
