crates/shipper/src/ops/auth/snapshots/shipper__ops__auth__resolver__tests__edge_snapshots__snapshot_token_source_env_default.snap
---
source: crates/shipper/src/ops/auth/resolver.rs
expression: "TokenSource::EnvDefault"
---
EnvDefault
